[FIX] web_studio: show email alias in sidebar
Since 50e6586 an input-group-addon is added next to the email
alias to display the alias domain.

As the domain can be long, the input was reduced to its
minimum size and its content was not visible.

This commit fixes this by adding a min-width on the input.

--- a/web_studio/static/src/less/sidebar.less
+++ b/web_studio/static/src/less/sidebar.less
@@ -83,6 +83,10 @@
                 }
             }
 
+            .input-group > input {
+                min-width: 75px;
+            }
+
             .o_web_studio_attrs {
                 font-size: 11px;
                 float: right;
